--- a/style.css
+++ b/style.css
@@ -6,26 +6,30 @@ body {
 
 .profile {
     border-radius: 50%;
+
 }
 
 #welcome {
     position: absolute;
     bottom: 0;
     background: linear-gradient(#6c60eb 0%, #9e27ae 100%);
-    display: table;
+    display:table;
     width: 100%;
     height: 100%;
 }
 
 h1 {
+
     font-size: 40px;
     font-family: sans-serif;
     font-weight: 300;
+
 }
 
 #name {
     font-size: 50px;
-    font-family: 'Combo', cursive;
+    font-family: 'Cinzel Decorative', cursive;
+
 }
 
 h2 {
@@ -35,7 +39,7 @@ h2 {
 }
 
 #bio {
-    font-family: 'Cinzel Decorative',cursive;
+    font-family: 'Cinzel Decorative', cursive;
     padding: 50px;
 }
 
@@ -47,26 +51,52 @@ h2 {
 }
 
 .div-class {
+
     display: table-cell;
     vertical-align: middle;
 }
 
-.menu{
-    list-style: none;
-    position: absolute;
-    top: 10px;
-    right:30px;
-    z-index:10;
-    cursor:pointer;
+.menu {
+    position: fixed;
+    background: white;
+    width: 100%;
+    margin-top: 0px;
+    top: 0px;
+    z-index: 10;
 }
 
-
-.links{
-    float: left;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
+.links {
+    display: inline;
+    padding-left: 33px;
+    padding-right: 25px;
     font-family: fantasy;
-    font-size: 20px;
+    font-size: 20px
 }
+
+.links:hover {
+    font-size: 25px;
+    text-decoration: underline;
+} /*O código acima é para mudar a formatação quando o mouse está em cima do código com class links - neste caso a fonte aumenta e fica sublinhado o link*/
+
+a {
+    text-decoration: none;
+}
+
+#writings a {
+    text-decoration: underline !important;
+    color: rgb(167, 28, 231) !important;
+} /*O código acima é para a tag a (âncora) que está dentro do id writings */
+
+#contact{
+    background:lightgray;
+}
+
+#contact iframe{
+    width: 100%;
+} /*O código acima é para a tag iframe que está dentro do id contact */
+
+.contact_1 h3
+{
+    display: inline;
+} /*O código acima é para a tag h3 que está dentro da classe contact_1 */
+
